@@ -917,6 +917,16 @@ static void cb_rcv2xx_4invite(osip_transaction_t *tr,osip_message_t *sip)
       int i;
       i = osip_to_get_tag (sip->to, &tag);
       i=1; /* default is the same dialog */
+
+      if (jd->d_dialog==NULL || jd->d_dialog->remote_tag==NULL)
+	{
+	  /* There are real use-case where a BYE is received/processed before
+	     the 200ok of the previous INVITE. In this case, jd->d_dialog is
+	     empty and the transaction should be silently discarded. */
+	  /* a ACK should still be sent... -but there is no dialog built- */
+	  return;
+	}
+
       if (jd->d_dialog->remote_tag==NULL && tag==NULL)
 	{  } /* non compliant remote UA -> assume it is the same dialog */
       else if (jd->d_dialog->remote_tag!=NULL && tag==NULL)
